--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
   "trailingComma": "none",
   "semi": true,
-  "singleQuote": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "singleQuote": true
 }
